# Methods-of-numerical-integration-of-systems-of-differential-equations

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  Задание.docx
cmake/: FixQtPluginPaths.cmake
include/: MainWindow.h  PlaceholderPlotWidget.h  PlotChartWidget.h  SimulationTypes.h  TAbstractIntegrator.h  TDynamicModel.h  TEuler.h  TRungeKutta.h  TSpaceCraft.h  TVector.h
src/: MainWindow.cpp  PlaceholderPlotWidget.cpp  PlotChartWidget.cpp  TAbstractIntegrator.cpp  TDynamicModel.cpp  TEuler.cpp  TRungeKutta.cpp  TSpaceCraft.cpp
