# ============================================================================
# ФАЙЛ CMakeLists.txt - ГЛАВНЫЙ СЦЕНАРИЙ СБОРКИ ПРОЕКТА LAB_1
# ============================================================================
# Что это за файл:
# CMakeLists.txt - это основной файл системы сборки CMake. Именно в нем
# описывается, как из исходных .cpp/.h файлов получить готовое приложение.
#
# Какие задачи решает данный файл в текущем проекте:
# 1) задает минимальную версию CMake и параметры самого проекта;
# 2) включает нужный стандарт языка C++;
# 3) подготавливает пути, по которым можно найти установленный Qt на macOS;
# 4) находит используемые модули Qt;
# 5) объявляет исполняемый файл приложения и список его исходников;
# 6) подключает ресурсы Qt (.qrc);
# 7) настраивает сборку приложения в виде .app bundle на macOS;
# 8) выполняет post-build шаги, чтобы готовое приложение запускалось на Mac.
#
# Иными словами, без этого файла проект как набор исходников существует,
# а как собираемое и запускаемое приложение - нет.
# ============================================================================

# Минимальная версия CMake.
# Это означает: если на машине установлена более старая версия CMake,
# конфигурирование проекта будет прервано.
cmake_minimum_required(VERSION 3.16)

# Объявляем сам проект.
# Здесь задаются:
# - имя проекта;
# - его версия;
# - язык, на котором он реализован.
# LANGUAGES CXX говорит CMake, что проект написан на C++.
project(ModelingMethodsLab1 VERSION 0.1.0 LANGUAGES CXX)

# Просим компилятор использовать стандарт C++17.
# Это тот стандарт языка, на который рассчитан код проекта.
set(CMAKE_CXX_STANDARD 17)

# Требуем именно указанный стандарт, а не "что-то максимально близкое".
# Иначе компилятор мог бы попытаться подставить более старый режим.
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Запрещаем нестандартные расширения компилятора.
# Это делает код более переносимым и ближе к "чистому" стандарту C++.
set(CMAKE_CXX_EXTENSIONS OFF)

# ----------------------------------------------------------------------------
# ФУНКЦИЯ _append_existing_prefixes
# ----------------------------------------------------------------------------
# Назначение функции:
# Добавить в список путей только те каталоги, которые действительно
# существуют на текущей машине.
#
# Зачем это нужно:
# При поиске Qt на macOS мы хотим проверить несколько типовых мест установки,
# но не хотим без необходимости засорять CMAKE_PREFIX_PATH несуществующими
# каталогами.
# ----------------------------------------------------------------------------
function(_append_existing_prefixes out_var)
    # Берем текущее содержимое выходной переменной.
    # Это позволяет функции не перезатирать список, а именно дополнять его.
    set(prefixes ${${out_var}})

    # По очереди перебираем все переданные пути.
    # ARGN - это специальное имя для "всех оставшихся аргументов функции".
    foreach(path IN LISTS ARGN)
        # Добавляем путь только если:
        # 1) строка с путем не пустая;
        # 2) такой каталог реально существует в файловой системе.
        if(path AND EXISTS "${path}")
            list(APPEND prefixes "${path}")
        endif()
    endforeach()

    # Убираем возможные повторы.
    # Это полезно, если один и тот же префикс был найден несколькими путями.
    list(REMOVE_DUPLICATES prefixes)

    # Возвращаем результат во внешнюю область видимости функции.
    # PARENT_SCOPE означает, что итоговое значение попадет в вызывающий код,
    # а не останется локальным только внутри этой функции.
    set(${out_var} "${prefixes}" PARENT_SCOPE)
endfunction()

# ----------------------------------------------------------------------------
# ПОДГОТОВКА ПУТЕЙ ПОИСКА QT ДЛЯ macOS
# ----------------------------------------------------------------------------
# На macOS Qt может быть установлен разными способами:
# - через официальный установщик Qt;
# - через Homebrew на Mac с Apple Silicon;
# - через Homebrew на Mac с Intel.
#
# Ниже мы собираем список типовых каталогов, чтобы CMake мог найти нужные
# пакеты без ручной правки проекта под каждый конкретный ноутбук.
# ----------------------------------------------------------------------------
if(APPLE)
    # Сюда будут складываться все найденные кандидатные префиксы Qt.
    # Под "префиксом" здесь понимается корневой каталог установки, откуда
    # CMake затем сможет обнаружить пакеты и инструменты Qt.
    set(_qt_candidate_prefixes "")

    # Пытаемся найти qmake или qmake6.
    # Это старый, но все еще удобный ориентир на уже установленный Qt.
    # Если qmake найден, по его расположению можно восстановить путь
    # к соответствующей установке Qt.
    find_program(_qt_qmake_executable NAMES qmake6 qmake)
    if(_qt_qmake_executable)
        # Получаем каталог bin, в котором лежит найденный qmake.
        get_filename_component(_qt_bin_dir "${_qt_qmake_executable}" DIRECTORY)

        # Поднимаемся на один уровень выше.
        # Обычно именно там находится корень соответствующей установки Qt.
        get_filename_component(_qt_prefix "${_qt_bin_dir}" DIRECTORY)

        # Добавляем этот префикс в список кандидатов.
        list(APPEND _qt_candidate_prefixes "${_qt_prefix}")
    endif()

    # Ищем типовые каталоги Qt Installer:
    # - системный /Applications/Qt/.../macos
    # - пользовательский ~/Qt/.../macos
    file(GLOB _qt_installer_prefixes LIST_DIRECTORIES true
        "/Applications/Qt/*/macos"
        "$ENV{HOME}/Qt/*/macos"
    )

    # Добавляем также типовые пути Homebrew:
    # - /opt/homebrew/... для Apple Silicon;
    # - /usr/local/...   для Intel.
    #
    # Обрати внимание: ниже перечислены не пользовательские пути вида
    # /Users/..., а именно общие стандартные места, типичные для macOS.
    _append_existing_prefixes(
        _qt_candidate_prefixes
        ${_qt_installer_prefixes}
        "/opt/homebrew/opt/qtbase"
        "/opt/homebrew/opt/qtsvg"
        "/opt/homebrew/opt/qtcharts"
        "/usr/local/opt/qtbase"
        "/usr/local/opt/qtsvg"
        "/usr/local/opt/qtcharts"
    )

    # Если удалось найти хотя бы один разумный префикс Qt, добавляем его
    # в CMAKE_PREFIX_PATH.
    #
    # CMAKE_PREFIX_PATH - это один из основных механизмов, по которым
    # find_package(...) понимает, где искать установленные библиотеки и
    # пакеты конфигурации.
    if(_qt_candidate_prefixes)
        list(PREPEND CMAKE_PREFIX_PATH ${_qt_candidate_prefixes})
        list(REMOVE_DUPLICATES CMAKE_PREFIX_PATH)
    endif()
endif()

# ----------------------------------------------------------------------------
# ПОИСК ПАКЕТОВ QT
# ----------------------------------------------------------------------------
# Qt6 ищется раздельно, потому что на практике модули Svg и Charts могут
# быть установлены отдельно от базовой части Qt.
# Поэтому надежнее явно запросить каждый нужный модуль.
# ----------------------------------------------------------------------------

# Базовый пакет Qt6 с поддержкой виджетов.
# Без него нельзя собрать графический интерфейс на Qt Widgets.
find_package(Qt6 REQUIRED COMPONENTS Widgets)

# Модуль Qt Svg нужен для отображения SVG-ресурсов и для работы
# соответствующего icon engine.
find_package(Qt6Svg REQUIRED)

# Модуль Qt Charts нужен для построения графиков координат, скоростей
# и проекций траекторий.
find_package(Qt6Charts REQUIRED)

# ----------------------------------------------------------------------------
# ОБЪЯВЛЕНИЕ ИСПОЛНЯЕМОГО ФАЙЛА ПРОЕКТА
# ----------------------------------------------------------------------------
# Здесь перечисляются все основные составляющие целевого приложения:
# - файлы реализации .cpp;
# - заголовочные файлы .h;
# - ресурсный файл .qrc.
#
# MACOSX_BUNDLE означает, что на macOS приложение собирается как .app bundle.
# Это привычный для macOS формат графического приложения.
# ----------------------------------------------------------------------------
add_executable(
    ModelingMethodsLab1
    MACOSX_BUNDLE
    main.cpp
    include/MainWindow.h
    include/PlotChartWidget.h
    include/SimulationTypes.h
    include/TAbstractIntegrator.h
    include/TDynamicModel.h
    include/TEuler.h
    include/TRungeKutta.h
    include/TSpaceCraft.h
    include/TVector.h
    src/MainWindow.cpp
    src/PlotChartWidget.cpp
    src/TAbstractIntegrator.cpp
    src/TEuler.cpp
    src/TRungeKutta.cpp
    src/TSpaceCraft.cpp
    resources/resources.qrc
)

# Подключаем папку include как путь поиска заголовочных файлов проекта.
# Благодаря этому внутри кода можно писать include по коротким именам.
target_include_directories(ModelingMethodsLab1 PRIVATE include)

# Передаем в код путь к корню проекта через compile definition.
# Это удобно, например, когда приложение должно экспортировать результаты
# в заранее известную подпапку внутри проекта.
target_compile_definitions(
    ModelingMethodsLab1
    PRIVATE MODELING_METHODS_LAB1_SOURCE_DIR="${CMAKE_CURRENT_SOURCE_DIR}"
)

# ----------------------------------------------------------------------------
# СВОЙСТВА ЦЕЛИ
# ----------------------------------------------------------------------------
# AUTOMOC / AUTOUIC / AUTORCC - это автоматические механизмы Qt/CMake.
#
# Они включают:
# - moc для системы метаобъектов Qt;
# - uic для файлов интерфейсов .ui;
# - rcc для ресурсов .qrc.
#
# Даже если .ui в проекте сейчас не используются, включенный AUTOUIC не
# мешает, а конфигурация остается типовой для Qt-приложения.
# ----------------------------------------------------------------------------
set_target_properties(
    ModelingMethodsLab1
    PROPERTIES
        AUTOMOC ON
        AUTOUIC ON
        AUTORCC ON
        MACOSX_BUNDLE_BUNDLE_NAME "ModelingMethodsLab1"
        MACOSX_BUNDLE_GUI_IDENTIFIER "com.modelingmethods.lab1"
)

# Линкуем приложение с теми библиотеками Qt, которые были найдены выше.
# Иначе на этапе компоновки у целевого файла не будет реализации нужных
# классов из Widgets, Svg и Charts.
target_link_libraries(ModelingMethodsLab1 PRIVATE Qt6::Widgets Qt6::Svg Qt6::Charts)

# Если используемая версия Qt/CMake предоставляет helper-команду
# qt_finalize_executable(...), вызываем ее.
#
# Это штатный modern Qt/CMake шаг, который может добавить нужные
# служебные настройки для цели.
if(COMMAND qt_finalize_executable)
    qt_finalize_executable(ModelingMethodsLab1)
endif()

# ----------------------------------------------------------------------------
# MACOS POST-BUILD: ПОДГОТОВКА ГОТОВОГО .APP BUNDLE
# ----------------------------------------------------------------------------
# Здесь выполняются дополнительные шаги, которые нужны именно для macOS:
# 1) найти инструменты codesign и macdeployqt;
# 2) упаковать Qt frameworks внутрь .app bundle;
# 3) отдельно положить нужные плагины платформы и SVG;
# 4) после всех копирований заново подписать bundle.
#
# Эти шаги не влияют на математическую часть проекта, но критичны для того,
# чтобы готовое приложение действительно запускалось на MacBook.
# ----------------------------------------------------------------------------
if(APPLE)
    # codesign нужен для финальной подписи bundle после всех изменений.
    # На macOS неподписанный или поврежденный bundle может просто не
    # запускаться.
    find_program(CODESIGN_EXECUTABLE NAMES codesign)

    # macdeployqt - это штатная утилита Qt для macOS.
    # Она умеет собрать внутрь .app необходимые Qt framework-библиотеки.
    find_program(
        MACDEPLOYQT_EXECUTABLE
        NAMES macdeployqt
        HINTS "${QT6_INSTALL_PREFIX}/${QT6_INSTALL_BINS}"
    )

    # ----------------------------------------------------------------------------
    # ПУТЬ К ПЛАТФОРМЕННОМУ ПЛАГИНУ COCOA
    # ----------------------------------------------------------------------------
    # Плагин Cocoa - это платформенный плагин Qt для macOS.
    # Без него приложение на Qt Widgets не сможет нормально стартовать
    # как нативное macOS-приложение.
    #
    # Команда set(...) в CMake присваивает значение переменной.
    # Здесь мы сначала специально кладем в переменную пустую строку.
    # Зачем это делается:
    # 1) переменная точно будет существовать даже если путь не найден;
    # 2) ниже можно безопасно проверять ее содержимое;
    # 3) код становится более предсказуемым и читаемым.
    set(QTBASE_PLATFORMS_PLUGIN "")

    # Конструкция if(...) в CMake выполняет блок только при истинности
    # условия. Здесь мы проверяем, известны ли:
    # - корневой префикс установки Qt;
    # - каталог плагинов Qt.
    #
    # Оба значения нужны, чтобы собрать полный путь к libqcocoa.dylib.
    if(QT6_INSTALL_PREFIX AND QT6_INSTALL_PLUGINS)
        # Еще одна команда set(...), но теперь уже не для пустой инициализации,
        # а для формирования реального пути к платформенному плагину Cocoa.
        #
        # В двойных кавычках используется подстановка переменных CMake:
        # ${QT6_INSTALL_PREFIX}  -> корень найденной установки Qt
        # ${QT6_INSTALL_PLUGINS} -> каталог плагинов относительно этой установки
        set(QTBASE_PLATFORMS_PLUGIN
            "${QT6_INSTALL_PREFIX}/${QT6_INSTALL_PLUGINS}/platforms/libqcocoa.dylib")
    endif()

    # ----------------------------------------------------------------------------
    # ПУТЬ К SVG ICON ENGINE
    # ----------------------------------------------------------------------------
    # SVG icon engine нужен для корректного показа SVG-иконок, используемых
    # в интерфейсе, например стрелок выпадающего списка.
    #
    # Точно так же, как и выше, сначала явно инициализируем переменную
    # пустым значением, чтобы затем по ходу поиска аккуратно ее заполнить.
    set(QTSVG_ICONENGINE_PLUGIN "")

    # Проверяем, удалось ли find_package(Qt6Svg ...) определить директорию,
    # в которой лежит CMake-конфигурация модуля Qt6Svg.
    #
    # Если Qt6Svg_DIR известна, то от нее уже можно восстановить путь
    # к соответствующей установке Qt.
    if(Qt6Svg_DIR)
        # Восстанавливаем корневой префикс установки QtSvg относительно
        # директории cmake-конфигурации найденного пакета.
        #
        # Команда get_filename_component(...) извлекает или вычисляет части
        # пути. В данном случае она:
        # 1) берет путь Qt6Svg_DIR;
        # 2) поднимается от него вверх по каталогу "../../..";
        # 3) приводит результат к абсолютному пути.
        #
        # ABSOLUTE означает: получить полный путь, а не относительный.
        get_filename_component(_qt_svg_prefix "${Qt6Svg_DIR}/../../.." ABSOLUTE)

        # Сначала пробуем наиболее типичное расположение плагина через
        # каталог share/qt/plugins.
        #
        # Условие EXISTS проверяет, существует ли такой файл или каталог
        # в файловой системе.
        if(EXISTS "${_qt_svg_prefix}/share/qt/plugins/iconengines/libqsvgicon.dylib")
            # Если файл найден, сохраняем этот путь в переменную.
            set(QTSVG_ICONENGINE_PLUGIN
                "${_qt_svg_prefix}/share/qt/plugins/iconengines/libqsvgicon.dylib")

        # Если там плагин не найден, пробуем общий каталог plugins от
        # найденной установки Qt.
        #
        # elseif - это "иначе, если".
        # Он позволяет перейти к запасному варианту поиска, не выходя из
        # общей логики одного и того же условия.
        elseif(QT6_INSTALL_PREFIX AND QT6_INSTALL_PLUGINS
                AND EXISTS "${QT6_INSTALL_PREFIX}/${QT6_INSTALL_PLUGINS}/iconengines/libqsvgicon.dylib")
            # Если сработал запасной вариант, сохраняем уже этот путь.
            set(QTSVG_ICONENGINE_PLUGIN
                "${QT6_INSTALL_PREFIX}/${QT6_INSTALL_PLUGINS}/iconengines/libqsvgicon.dylib")
        endif()
    endif()

    # ----------------------------------------------------------------------------
    # УПАКОВКА QT FRAMEWORKS ВНУТРЬ .APP
    # ----------------------------------------------------------------------------
    # Здесь используем macdeployqt, чтобы он положил внутрь bundle сами
    # Qt framework-библиотеки.
    #
    # Ключ -no-plugins выбран специально:
    # нужные плагины мы ниже копируем вручную, чтобы:
    # - лучше контролировать состав bundle;
    # - не тащить лишние плагины;
    # - понимать, какие именно зависимости действительно нужны проекту.
    if(MACDEPLOYQT_EXECUTABLE)
        # add_custom_command(...) позволяет привязать к цели дополнительные
        # команды, которые CMake должен выполнить во время сборки.
        #
        # TARGET ModelingMethodsLab1 POST_BUILD означает:
        # "выполни эти действия после того, как цель ModelingMethodsLab1 уже
        # успешно собрана".
        #
        # Это очень важно: до сборки самого приложения bundle еще не существует,
        # а значит и раскладывать внутрь него frameworks было бы некуда.
        add_custom_command(
            TARGET ModelingMethodsLab1 POST_BUILD

            # COMMAND задает конкретную внешнюю команду, которую нужно запустить.
            # Здесь это сама утилита macdeployqt, найденная ранее через
            # find_program(...).
            COMMAND "${MACDEPLOYQT_EXECUTABLE}"

                # $<TARGET_BUNDLE_DIR:ModelingMethodsLab1> - это генераторное
                # выражение CMake.
                #
                # Генераторные выражения имеют вид $<...> и вычисляются не
                # сразу в момент чтения CMakeLists.txt, а позже, когда CMake
                # уже знает точные параметры цели.
                #
                # TARGET_BUNDLE_DIR:ModelingMethodsLab1 означает:
                # "подставь путь к .app bundle, который будет создан для цели
                # ModelingMethodsLab1".
                "$<TARGET_BUNDLE_DIR:ModelingMethodsLab1>"

                # -no-plugins запрещает macdeployqt автоматически копировать
                # все подряд плагины Qt.
                -no-plugins

                # -always-overwrite говорит утилите перезаписывать уже
                # существующие файлы в bundle, если это потребуется.
                -always-overwrite

            # COMMENT - это просто человекочитаемый текст, который CMake
            # покажет в процессе сборки, чтобы было понятно, что сейчас
            # выполняется.
            COMMENT "Deploying Qt frameworks into the macOS app bundle"
        )
    endif()

    # ----------------------------------------------------------------------------
    # КОПИРОВАНИЕ ПЛАТФОРМЕННОГО ПЛАГИНА COCOA
    # ----------------------------------------------------------------------------
    # Создаем каталог platforms внутри bundle и копируем туда libqcocoa.dylib.
    # Это нужно, чтобы Qt смог создать графическое окно на macOS.
    if(EXISTS "${QTBASE_PLATFORMS_PLUGIN}")
        # Здесь снова используется add_custom_command(...), привязанный к
        # событию POST_BUILD.
        #
        # Отличие от предыдущего блока в том, что теперь выполняется уже не
        # одна внешняя утилита, а две служебные файловые операции подряд.
        add_custom_command(
            TARGET ModelingMethodsLab1 POST_BUILD

            # ${CMAKE_COMMAND} - это путь к самому исполняемому файлу CMake.
            # Ключ -E переводит CMake в режим "выполнить встроенную
            # служебную команду", не зависящую от конкретной ОС.
            #
            # make_directory создает каталог, если его еще нет.
            COMMAND ${CMAKE_COMMAND} -E make_directory
                "$<TARGET_BUNDLE_DIR:ModelingMethodsLab1>/Contents/PlugIns/platforms"

            # copy_if_different копирует файл только в том случае, если
            # целевой файл отсутствует или отличается от исходного.
            #
            # Это удобнее, чем безусловное копирование, потому что сборка не
            # делает лишнюю работу при каждом запуске.
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${QTBASE_PLATFORMS_PLUGIN}"
                "$<TARGET_BUNDLE_DIR:ModelingMethodsLab1>/Contents/PlugIns/platforms/libqcocoa.dylib"
            COMMENT "Copying the Cocoa platform plugin into the macOS app bundle"
        )
    endif()

    # ----------------------------------------------------------------------------
    # КОПИРОВАНИЕ SVG ICON ENGINE
    # ----------------------------------------------------------------------------
    # Создаем каталог iconengines внутри bundle и копируем туда SVG engine.
    # Он нужен для корректной отрисовки SVG-иконок, подключенных через
    # ресурсную систему Qt.
    if(EXISTS "${QTSVG_ICONENGINE_PLUGIN}")
        # Логика аналогична предыдущему блоку:
        # 1) создаем нужный подкаталог внутри bundle;
        # 2) копируем в него конкретный plugin-файл.
        add_custom_command(
            TARGET ModelingMethodsLab1 POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E make_directory
                "$<TARGET_BUNDLE_DIR:ModelingMethodsLab1>/Contents/PlugIns/iconengines"
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${QTSVG_ICONENGINE_PLUGIN}"
                "$<TARGET_BUNDLE_DIR:ModelingMethodsLab1>/Contents/PlugIns/iconengines/libqsvgicon.dylib"
            COMMENT "Copying the SVG icon engine plugin into the macOS app bundle"
        )
    endif()

    # ----------------------------------------------------------------------------
    # ФИНАЛЬНАЯ ПОДПИСЬ BUNDLE
    # ----------------------------------------------------------------------------
    # После копирования frameworks и плагинов bundle физически изменяется.
    # Это означает, что предыдущая подпись уже невалидна.
    #
    # Поэтому в самом конце bundle нужно подписать заново хотя бы ad-hoc
    # подписью. Иначе macOS может просто завершить приложение на запуске.
    if(CODESIGN_EXECUTABLE)
        # Здесь снова выполняется post-build команда, но уже не для копирования,
        # а для переподписывания готового .app bundle.
        add_custom_command(
            TARGET ModelingMethodsLab1 POST_BUILD

            # Запускаем найденную системную утилиту codesign.
            COMMAND "${CODESIGN_EXECUTABLE}"

                # --force означает "переподписать даже если подпись уже была".
                --force

                # --deep просит подписать не только сам bundle, но и вложенные
                # компоненты: frameworks, плагины и другие вложенные объекты.
                --deep

                # --sign указывает, какой подписью подписывать.
                # Символ "-" означает ad-hoc подпись, то есть локальную
                # техническую подпись без Developer ID сертификата.
                --sign
                -

                # Здесь снова используется генераторное выражение, чтобы
                # получить точный путь к .app bundle текущей цели.
                "$<TARGET_BUNDLE_DIR:ModelingMethodsLab1>"
            COMMENT "Applying an ad-hoc signature to the macOS app bundle"
        )
    endif()
endif()
